# FunOS

./: CMakeLists.txt  README.md  main.c  task_cardMngr.txt
GP/: gpAPI.h  isd.h  open.h  tags.h
HAL/WS/: CMakeLists.txt  ws_interface.c  ws_interface.h  ws_wraper.c  ws_wraper.h
HAL/WS/include/: log.h  wic.h
HAL/WS/src/: wic.c  wic_transport.c  wic_utils.c
ISO7816/: APDU.c  APDU.h  CMakeLists.txt  StatusWords.h  apdu.c  apdu.h
globalPlatform/: CMakeLists.txt  cardMngr.h  commonInfo.h  commonTypes.h  gpRegistry.h  isd.c  isd.h  securityDomain.h  statuses.h
hal/: CMakeLists.txt
hal/udp/: CMakeLists.txt  cmdParser.c  cmdParser.h  main.c  udp.c  udp.h  udp_handler.c  udp_handler.h
hal/webSocket/: CMakeLists.txt  wic_config.h  ws_wraper.c  ws_wraper.h
hal/webSocket/include/: wic_utils.h
hal/webSocket/src/: wic_utils.c
include/: common.h  process.h  queue.h
iso7816/: CMakeLists.txt  apdu.c  apdu.h  statusWords.h
memngr/: CMakeLists.txt  flash.c  flash.h
src/: main.c  process.c  queue.c  x_common.h  x_fifo_queue.c  x_getnode.c  x_new_queue.c  x_prio_queue.c  x_process.h  x_queue.h
src/arch/: ctxsw.S
src/queue/: CMakeLists.txt  x_prio_queue.c  x_queue.h
src/scheduler/: x_process.h  x_ready.c  x_scheduler.c
